# OCR_Local

./: .gitignore  README.md  pyproject.toml
configs/: config.ollama.yaml  config.yaml  config_a100.yaml  resume_schema.json  skills_taxonomy.json
configs/prompts/: resume_extraction.txt
docs/: ARCHITECTURE.md  OLLAMA_SETUP.md
samples/: README.md
scripts/: collect_jetson_info.py  run_pipeline.py
src/ocr_local_cli/: __init__.py  config.py  pipeline.py  schema.py
src/ocr_local_cli/extraction/: __init__.py  llm_client.py  parser.py  prompt_builder.py
src/ocr_local_cli/layout/: __init__.py  column_merger.py
src/ocr_local_cli/ocr/: __init__.py  base.py  paddle_client.py  tesseract_client.py
src/ocr_local_cli/preprocessing/: __init__.py  image_ops.py
src/ocr_local_cli/utils/: __init__.py  files.py  logging.py
src/ocr_local_cli/validation/: __init__.py  validators.py
tests/: test_schema.py
