[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-local-cli"
version = "0.1.0"
description = "High-accuracy resume OCR pipeline with LLM-assisted extraction."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
dependencies = [
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "layoutparser>=0.3.4",
    "numpy>=1.24",
    "Pillow>=9.5.0",
    "scikit-image>=0.21.0",
    "rapidfuzz>=3.5.0",
    "dateparser>=1.1.8",
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]
paddle3 = [
    "paddlepaddle>=3.2.0,<3.3.0",
    "paddleocr>=3.3.0,<3.4.0",
    "paddlex>=3.3.0,<3.4.0",
    "opencv-python>=4.8.0,<4.13.0",
    "opencv-contrib-python>=4.8.0,<4.13.0",
]
paddle2 = [
    "paddlepaddle==2.6.2",
    "paddleocr==2.7.3",
    "opencv-python<=4.6.0.66",
    "opencv-contrib-python<=4.6.0.66",
]
paddle = [
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.3.0",
    "paddlex>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
